--- a/README
+++ b/README
@@ -1,29 +1,29 @@
-KongApi version 0.01
+KongApi version 0.1
 ====================
 
-INSTALLATION
+### Examples
+
+
+
+### Installation
 
 To install this module type the following:
 
-   perl Makefile.PL
-   make
-   make test
-   make install
+   `perl Makefile.PL`
+   `make`
+   `make test`
+   `make install`
 
-DEPENDENCIES
+### Dependencies
 
 This module requires these other modules and libraries:
 
-  Moo >= 2.003
+  **Moo >= 2.003**
 
-COPYRIGHT AND LICENCE
-
-Put the correct copyright and licence information here.
+### Copyright and License
 
 Copyright (C) 2017 by Alexander Beloglazov
 
 This library is free software; you can redistribute it and/or modify
 it under the same terms as Perl itself, either Perl version 5.24.0 or,
 at your option, any later version of Perl 5 you may have available.
-
-
